Begin work on Capabilities
Also use List#getFirst / getLast in a few places