@@ -60,8 +60,8 @@ public class ComplicatedBeenestDecorator extends TreeDecorator {
             List<BlockPos> leaves = context.leaves();
             List<BlockPos> logs = context.logs();
             int i = !leaves.isEmpty()
-                    ? Math.max(leaves.get(0).getY() - 1, logs.get(0).getY() + 1)
-                    : Math.min(logs.get(0).getY() + 1 + rand.nextInt(3), logs.get(logs.size() - 1).getY());
+                    ? Math.max(leaves.getFirst().getY() - 1, logs.getFirst().getY() + 1)
+                    : Math.min(logs.getFirst().getY() + 1 + rand.nextInt(3), logs.getLast().getY());
             List<BlockPos> list2 = logs.stream()
                     .filter(pos -> pos.getY() == i)
                     .flatMap(pos -> Stream.of(SPAWN_DIRECTIONS).map(pos::relative))
